Delay scrollContents until the next paint
    Fix a ChickenAndEgg issue by delaying scroll until the
    next paint when the compositing layers are up to date.
    The amount scrolled but not painted is stored in
    ScrollView::m_pendingScrollDelta.
    
    Rearrange the code such that if there are fixed position
    elements, do the following before painting:
    
    1. Walk the tree and do updateLayerPosition
    2. Mark that we need to update compositing layers since
       layers may have changed as a result of scrolling if
         there are fixed elements.
    3. Update compositing layers.
    4. Invalidate fixed position elements.
    5. Update repaint rects for fixed position elements to
       reflect the new scroll position.
    
    Also, when calculating repaint rects for fixed elements,
    take into account both the scroll position and the
    scroll delta. This way we can invalidate the previous
    scroll position for the fixed element if it is
    promoted to a layer as a result of scrolling.

BUG=343766
BUG=343767

Review URL: https://codereview.chromium.org/191693002

git-svn-id: svn://svn.chromium.org/blink/trunk@170086 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/absolute-inside-out-of-view-fixed.html
+++ b/LayoutTests/compositing/absolute-inside-out-of-view-fixed.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <script src="../resources/run-after-display.js"></script>
     <style>
         body {
             margin: 0;
@@ -29,18 +30,24 @@
       if (window.testRunner) {
         testRunner.waitUntilDone();
         testRunner.dumpAsText();
-        if (window.internals)
-            window.internals.settings.setAcceleratedCompositingForFixedPositionEnabled(true);
+      }
+      if (window.internals) {
+          window.internals.settings.setAcceleratedCompositingForFixedPositionEnabled(true);
       }
 
       function doScroll()
       {
         window.setTimeout(function() {
           window.scrollTo(0, 200);
-          if (window.internals) {
-            document.getElementById('results').innerText = internals.layerTreeAsText(document);
-            testRunner.notifyDone();
-          }
+
+          runAfterDisplay(function() {
+            if (window.internals) {
+              document.getElementById('results').innerText = internals.layerTreeAsText(document);
+              if (window.testRunner) {
+                testRunner.notifyDone();
+              }
+            }
+          });
         }, 10);
       }
       
