--- a/LayoutTests/compositing/rtl/rtl-fixed-overflow-scrolled.html
+++ b/LayoutTests/compositing/rtl/rtl-fixed-overflow-scrolled.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<script src="../../resources/run-after-display.js"></script>
 <style>
     body {
         direction: rtl;
@@ -49,9 +50,11 @@
         window.setTimeout(function() {
             window.scrollTo(offset, 0);
             if (window.testRunner) {
-                if (top == self)
-                    document.getElementById('layertree').innerText = window.internals.layerTreeAsText(document);
-                testRunner.notifyDone();
+                runAfterDisplay(function() {
+                    if (top == self)
+                        document.getElementById('layertree').innerText = window.internals.layerTreeAsText(document);
+                    testRunner.notifyDone();
+                });
             }
         }, 0);
     }
