--- a/LayoutTests/fast/repaint/fixed-after-scroll.html
+++ b/LayoutTests/fast/repaint/fixed-after-scroll.html
@@ -1,10 +1,22 @@
 <html>
 <head>
     <link rel="stylesheet" href="resources/default.css">
+    <script src="../../resources/run-after-display.js"></script>
     <script src="resources/text-based-repaint.js"></script>
     <script>
-        if (window.testRunner)
+        if (window.testRunner) {
+            testRunner.waitUntilDone();
             testRunner.dumpAsTextWithPixelResults();
+        }
+
+        window.onload = function()
+        {
+            window.scrollTo(0, 500);
+            runAfterDisplay(function() {
+                runRepaintTest();
+                testRunner.notifyDone();
+            });
+        }
 
         function repaintTest()
         {
@@ -13,13 +25,10 @@
     </script>
 </head>
 
-<body style="height:2000px;" onload="runRepaintTest()">
+<body style="height:2000px;">
     <!-- Repaint test for https://bugs.webkit.org/show_bug.cgi?id=64650: RenderLayer fixed position logic needs more basic testing -->
     <!-- You should see no red on this page. -->
     <div style="top: 200px;" class="red fixed"></div>
     <div id="t" style="top: 200px;" class="green absolute"></div>
-    <script>
-        window.scrollTo(0, 500);
-    </script>
 </body>
 </html>
