--- a/LayoutTests/fast/repaint/fixed-and-absolute-position-scrolled.html
+++ b/LayoutTests/fast/repaint/fixed-and-absolute-position-scrolled.html
@@ -1,22 +1,33 @@
 <html>
 <head>
     <link rel="stylesheet" href="resources/default.css">
+    <script src="../../resources/run-after-display.js"></script>
     <script src="resources/text-based-repaint.js" type="text/javascript"></script>
     <script type="text/javascript">
-        if (window.testRunner)
+        if (window.testRunner) {
+            testRunner.waitUntilDone();
             testRunner.dumpAsTextWithPixelResults();
+        }
+
+        window.onload = function()
+        {
+            window.scrollTo(0, 500);
+            runAfterDisplay(function() {
+                runRepaintTest();
+                if (window.testRunner)
+                    testRunner.notifyDone();
+            });
+        }
+
         function repaintTest()
         {
             document.getElementById('container').style.position = 'static';
         }
     </script>
 </head>
-<body style="height:2000px;" onload="runRepaintTest()">
+<body style="height:2000px;">
     <!-- You should see 1 green rectangle in the output and no red. -->
     <div style="top: 200px; left: 100px;" class="fixed red"></div>
     <div id="container" style="top: 5000px;" class="relative"><div id="absoluteDiv" style="top: 700px; left:100px;" class="absolute green"></div></div>
-    <script>
-        window.scrollTo(0, 500);
-    </script>
 </body>
 </html>
