--- a/LayoutTests/fast/repaint/fixed-child-move-after-scroll.html
+++ b/LayoutTests/fast/repaint/fixed-child-move-after-scroll.html
@@ -1,12 +1,21 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <script src="../../resources/run-after-display.js"></script>
   <script src="resources/text-based-repaint.js"></script>
   <script type="text/javascript">
       function scrollAndRepaint()
       {
+          if (window.testRunner)
+            testRunner.waitUntilDone();
+
           scrollBy(0, 200);
-          runRepaintTest();
+
+          runAfterDisplay(function() {
+            runRepaintTest();
+            if (window.testRunner)
+              testRunner.notifyDone();
+          });
       }
       function repaintTest()
       {
