--- a/LayoutTests/fast/repaint/fixed-table-overflow-zindex.html
+++ b/LayoutTests/fast/repaint/fixed-table-overflow-zindex.html
@@ -6,10 +6,23 @@
         td { background: green; padding: 0px; border-style: none; border: 0px; }
         td.fixed { position: fixed; left: 100px; top: 0px; z-index: 3; }
     </style>
+    <script src="../../resources/run-after-display.js"></script>
     <script src="resources/text-based-repaint.js"></script>
     <script>
-        if (window.testRunner)
+        if (window.testRunner) {
+            testRunner.waitUntilDone();
             testRunner.dumpAsTextWithPixelResults();
+        }
+
+        window.onload = function()
+        {
+            window.scrollTo(0, 100);
+            runAfterDisplay(function() {
+                runRepaintTest();
+                if (window.testRunner)
+                    testRunner.notifyDone();
+            });
+        }
 
         function repaintTest()
         {
@@ -17,14 +30,11 @@
         }
     </script>
 </head>
-<body style="height:2000px;" onload="runRepaintTest()">
+<body style="height:2000px;">
     <!-- Repaint test for https://bugs.webkit.org/show_bug.cgi?id=64650: RenderLayer fixed position logic needs more basic testing -->
     <!-- You should see no red on this page. -->
     <table>
         <tr><td></td><td></td></tr>
         <tr><td id="moveMe"></td><td class="red"><div class="green" style="position: relative; left: -100px; top: 0px;"></div></td></tr>
-    <script>
-        window.scrollTo(0, 100);
-    </script>
 </body>
 </html>
