--- a/LayoutTests/fast/repaint/fixed-tranformed.html
+++ b/LayoutTests/fast/repaint/fixed-tranformed.html
@@ -2,38 +2,46 @@
 
 <html>
 <head>
-<style type="text/css" media="screen">
-    body {
-        height: 1000px;
-        margin: 0;
-    }
-    #test {
-      width: 100px;
-      height: 100px;
-      background-color: red;
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      -webkit-transform: translate(50px, 50px);
-    }
-    
-    .box:hover {
-        background-color: green;
-    }
-</style>
+    <style type="text/css" media="screen">
+        body {
+          height: 1000px;
+          margin: 0;
+        }
+        #test {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        -webkit-transform: translate(50px, 50px);
+        }
+
+        .box:hover {
+          background-color: green;
+        }
+    </style>
+    <script src="../../resources/run-after-display.js"></script>
     <script src="resources/text-based-repaint.js" type="text/javascript"></script>
     <script type="text/javascript">
-       function repaintTest()
-       {
+        if (window.testRunner)
+            testRunner.waitUntilDone();
+
+        function repaintTest()
+        {
             document.getElementById('test').style.background='green';
-       }
-       
-       function setupTest()
-       {
-           window.scrollBy(0, 50);
-           runRepaintTest();
-       }
-       window.addEventListener('load', setupTest, false);
+        }
+
+        function setupTest()
+        {
+            window.scrollBy(0, 50);
+            runAfterDisplay(function() {
+                runRepaintTest();
+                if (window.testRunner)
+                    testRunner.notifyDone();
+            });
+        }
+        window.addEventListener('load', setupTest, false);
     </script>
 </head>
 <body>
