--- a/LayoutTests/fast/repaint/resources/fixed-move-after-keyboard-scroll-iframe.html
+++ b/LayoutTests/fast/repaint/resources/fixed-move-after-keyboard-scroll-iframe.html
@@ -1,8 +1,16 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <script src="../../../resources/run-after-display.js"></script>
   <script src="text-based-repaint.js"></script>
   <script type="text/javascript">
+      function runRepaintTestAfterDisplay()
+      {
+          runAfterDisplay(function() {
+              runRepaintTest();
+          });
+      }
+
       function repaintTest()
       {
           document.getElementById('toMove').style.left = "150px";
@@ -10,9 +18,11 @@
           if (window.testRunner)
               window.testRunner.notifyDone();
       }
+
       if (window.testRunner)
           window.testRunner.waitUntilDone();
-      document.addEventListener("scroll", runRepaintTest, false);
+
+      document.addEventListener("scroll", runRepaintTestAfterDisplay, false);
   </script>
 </head>
   <body style="height: 820;">
