--- a/LayoutTests/fast/repaint/scroll-fixed-layer-with-reflection.html
+++ b/LayoutTests/fast/repaint/scroll-fixed-layer-with-reflection.html
@@ -1,10 +1,23 @@
 <html>
 <head>
     <link rel="stylesheet" href="resources/default.css"></style>
+    <script src="../../resources/run-after-display.js"></script>
     <script src="resources/text-based-repaint.js" type="text/javascript"></script>
     <script type="text/javascript">
-        if (window.testRunner)
+        if (window.testRunner) {
+            testRunner.waitUntilDone();
             testRunner.dumpAsTextWithPixelResults();
+        }
+
+        window.onload = function()
+        {
+            window.scrollTo(100, 180);
+            runAfterDisplay(function() {
+                runRepaintTest();
+                if (window.testRunner)
+                    testRunner.notifyDone();
+            });
+        }
 
         function repaintTest()
         {
@@ -14,7 +27,7 @@
         }
     </script>
 </head>
-<body style="height:2000px;" onload="runRepaintTest()">
+<body style="height:2000px;">
     <!-- You should see 1 green rectangle rotated in the output and no red. -->
     <div id="moveMe" style="top: 100px; left: 250px;" class="fixed clipped">
         <div class="absolute green reflected" style="height: 50px; top: 150px; left: 150px;"></div>
@@ -22,8 +35,5 @@
     </div>
     <!-- Make sure we are scrolled -->
     <div style="top: 0px; left: 0px;" class="absolute red"></div>
-    <script>
-        window.scrollTo(100, 180);
-    </script>
 </body>
 </html>
