Have SourceBuffer throw TypeError for non-finite doubles.
Switch to throwing TypeError instead of TypeMismatchError when encountering
non-finite doubles, following what WebIDL requires

 http://heycam.github.io/webidl/#es-double

R=acolwell@chromium.org
BUG=353245

Review URL: https://codereview.chromium.org/212953004

git-svn-id: svn://svn.chromium.org/blink/trunk@170098 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/media/media-source/mediasource-timestamp-offset.html
+++ b/LayoutTests/http/tests/media/media-source/mediasource-timestamp-offset.html
@@ -16,8 +16,8 @@
                   var segmentInfo = MediaSourceUtil.SEGMENT_INFO;
                   var sourceBuffer = mediaSource.addSourceBuffer(segmentInfo.type);
 
-                  if (expected == 'TypeMismatchError')  {
-                      assert_throws('TypeMismatchError',
+                  if (expected == 'TypeError')  {
+                      assert_throws({name: 'TypeError'},
                           function() { sourceBuffer.timestampOffset = value; },
                           'setting timestampOffset to ' + description + ' throws an exception.');
                   } else {
@@ -32,10 +32,10 @@
           simpleTimestampOffsetTest(10.5, 10.5, 'a positive number');
           simpleTimestampOffsetTest(-10.4, -10.4, 'a negative number');
           simpleTimestampOffsetTest(0, 0, 'zero');
-          simpleTimestampOffsetTest(Number.POSITIVE_INFINITY, 'TypeMismatchError', 'positive infinity');
-          simpleTimestampOffsetTest(Number.NEGATIVE_INFINITY, 'TypeMismatchError', 'negative infinity');
-          simpleTimestampOffsetTest(Number.NaN, 'TypeMismatchError', 'NaN');
-          simpleTimestampOffsetTest(undefined, 'TypeMismatchError', 'undefined');
+          simpleTimestampOffsetTest(Number.POSITIVE_INFINITY, 'TypeError', 'positive infinity');
+          simpleTimestampOffsetTest(Number.NEGATIVE_INFINITY, 'TypeError', 'negative infinity');
+          simpleTimestampOffsetTest(Number.NaN, 'TypeError', 'NaN');
+          simpleTimestampOffsetTest(undefined, 'TypeError', 'undefined');
           simpleTimestampOffsetTest(null, 0, 'null');
           simpleTimestampOffsetTest(false, 0, 'false');
           simpleTimestampOffsetTest(true, 1, 'true');
