--- a/LayoutTests/http/tests/media/media-source/mediasource-appendwindow.html
+++ b/LayoutTests/http/tests/media/media-source/mediasource-appendwindow.html
@@ -32,15 +32,15 @@
               assert_true(sourceBuffer != null, "New SourceBuffer returned");
               sourceBuffer.appendWindowEnd = 500.0;
 
-              assert_throws("TypeMismatchError",
+              assert_throws({name: "TypeError"},
                   function() { sourceBuffer.appendWindowStart = Number.NEGATIVE_INFINITY; },
                   "set appendWindowStart throws an exception for Number.NEGATIVE_INFINITY.");
 
-              assert_throws("TypeMismatchError",
+              assert_throws({name: "TypeError"},
                   function() { sourceBuffer.appendWindowStart = Number.POSITIVE_INFINITY; },
                   "set appendWindowStart throws an exception for Number.POSITIVE_INFINITY.");
 
-              assert_throws("TypeMismatchError",
+              assert_throws({name: "TypeError"},
                   function() { sourceBuffer.appendWindowStart = Number.NaN; },
                   "set appendWindowStart throws an exception for Number.NaN.");
 
@@ -101,7 +101,7 @@
 
               sourceBuffer.abort();
               assert_equals(sourceBuffer.appendWindowStart, 0, "appendWindowStart is 0 after an abort'");
-              assert_equals(sourceBuffer.appendWindowEnd, Number.POSITIVE_INFINITY, 
+              assert_equals(sourceBuffer.appendWindowEnd, Number.POSITIVE_INFINITY,
                             "appendWindowStart is POSITIVE_INFINITY after an abort");
               test.waitForExpectedEvents(function()
               {
