Implement ::shadow pseudo element and replace /shadow/ with ::shadow.
If an element has at least one shadow tree, the ::shadow pseudo-element matches the shadow roots themselves.

c.f. Shadow DOM styling spec:
http://drafts.csswg.org/css-scoping/#shadow-pseudoelement

The new spec doesn't support /shadow/ combinator. Instead, it supports ::shadow.

BUG=355954
TEST=fast/dom/shadow/content-pseudo-element-with-hat.html,fast/dom/shadow/querySelector-for-multiple-shadowroots.html,fast/dom/shadow/querySelector-for-useragent-shadowroot.html,fast/dom/shadow/querySelector-with-shadow-all-and-shadow-deep.html,fast/dom/shadow/style-with-hat.html

Review URL: https://codereview.chromium.org/210713002

git-svn-id: svn://svn.chromium.org/blink/trunk@170131 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/css/invalidation/targeted-class-shadow-combinator.html
+++ b/LayoutTests/fast/css/invalidation/targeted-class-shadow-combinator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script src="../../../resources/js-test.js"></script>
 <style>
-.t1 #host1 /shadow/ .match { background-color: green; }
+.t1 #host1::shadow .match { background-color: green; }
 .t2 /deep/ .match { background-color: green; }
 </style>
 <div id="t1">
@@ -13,7 +13,7 @@
     <div></div>
 </div>
 <script>
-description("Check that targeted class invalidation works for /shadow/ and /deep/ combinators.");
+description("Check that targeted class invalidation works for ::shadow and /deep/ combinators.");
 
 // Create shadow trees
 
