--- a/LayoutTests/fast/dom/shadow/querySelector-for-multiple-shadowroots.html
+++ b/LayoutTests/fast/dom/shadow/querySelector-for-multiple-shadowroots.html
@@ -25,31 +25,31 @@ document.body.appendChild(
 document.body.appendChild(
     createDOM('pre', {'id': 'console'}));
 
-description('crbug.com/337616: test for querySelectorAll with /shadow/ and /deep/');
+description('crbug.com/337616: test for querySelectorAll with ::shadow and /deep/');
 
 var shadowRoot1 = getNodeInTreeOfTrees('foo-host/');
 var shadowRoot2 = getNodeInTreeOfTrees('foo-host//');
 var shadowRoot3 = getNodeInTreeOfTrees('foo-host///');
 
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span").length', '6');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[0].id', '"not-top1"');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[1].id', '"top1"');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[2].id', '"not-top2"');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[3].id', '"top2"');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[4].id', '"not-top3"');
-shouldBe('document.querySelectorAll("#foo-host /shadow/ span")[5].id', '"top3"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span").length', '6');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[0].id', '"not-top1"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[1].id', '"top1"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[2].id', '"not-top2"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[3].id', '"top2"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[4].id', '"not-top3"');
+shouldBe('document.querySelectorAll("#foo-host::shadow span")[5].id', '"top3"');
 
-shouldBe('shadowRoot1.querySelectorAll(":host /shadow/ span").length', '2');
-shouldBe('shadowRoot1.querySelectorAll(":host /shadow/ span")[0].id', '"not-top1"');
-shouldBe('shadowRoot1.querySelectorAll(":host /shadow/ span")[1].id', '"top1"');
+shouldBe('shadowRoot1.querySelectorAll(":host::shadow span").length', '2');
+shouldBe('shadowRoot1.querySelectorAll(":host::shadow span")[0].id', '"not-top1"');
+shouldBe('shadowRoot1.querySelectorAll(":host::shadow span")[1].id', '"top1"');
 
-shouldBe('shadowRoot2.querySelectorAll(":host /shadow/ span").length', '2');
-shouldBe('shadowRoot2.querySelectorAll(":host /shadow/ span")[0].id', '"not-top2"');
-shouldBe('shadowRoot2.querySelectorAll(":host /shadow/ span")[1].id', '"top2"');
+shouldBe('shadowRoot2.querySelectorAll(":host::shadow span").length', '2');
+shouldBe('shadowRoot2.querySelectorAll(":host::shadow span")[0].id', '"not-top2"');
+shouldBe('shadowRoot2.querySelectorAll(":host::shadow span")[1].id', '"top2"');
 
-shouldBe('shadowRoot3.querySelectorAll(":host /shadow/ span").length', '2');
-shouldBe('shadowRoot3.querySelectorAll(":host /shadow/ span")[0].id', '"not-top3"');
-shouldBe('shadowRoot3.querySelectorAll(":host /shadow/ span")[1].id', '"top3"');
+shouldBe('shadowRoot3.querySelectorAll(":host::shadow span").length', '2');
+shouldBe('shadowRoot3.querySelectorAll(":host::shadow span")[0].id', '"not-top3"');
+shouldBe('shadowRoot3.querySelectorAll(":host::shadow span")[1].id', '"top3"');
 </script>
 </html>
 
