--- a/LayoutTests/svg/as-background-image/animated-svg-as-background.html
+++ b/LayoutTests/svg/as-background-image/animated-svg-as-background.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="../../fast/repaint/resources/repaint.js" type="text/javascript"></script>
+  <script src="../../fast/repaint/resources/text-based-repaint.js" type="text/javascript"></script>
   <script type="text/javascript">
   function repaintTest() {
     if (!window.testRunner)
@@ -23,7 +23,7 @@
     }
   </style>
 </head>
-<body style='margin: 0px' onload="runRepaintTest()">
+<body style='margin: 0px' onload="forceStyleRecalc();repaintTest();">
 <div>&nbsp;</div>
 </body>
 </html>
