--- a/LayoutTests/svg/custom/filter-css-transform-resolution.html
+++ b/LayoutTests/svg/custom/filter-css-transform-resolution.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../../fast/repaint/resources/repaint.js"></script>
+  <script src="../../fast/repaint/resources/text-based-repaint.js"></script>
   <script>
     function repaintTest() {
       document.getElementById('div').style.webkitTransform = '';
     }
   </script>
 </head>
-<body onload="runRepaintTest()">
+<body onload="forceStyleRecalc();repaintTest();">
   <!-- Test for http://crbug.com/345441 - the circle edge should not be blurry -->
   <div id="div" style="-webkit-transform: rotate3d(1, 0, 0, 85deg); -webkit-transform-origin: 100px 100px 0px;">
     <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
