--- a/LayoutTests/svg/repaint/buffered-rendering-dynamic-image.html
+++ b/LayoutTests/svg/repaint/buffered-rendering-dynamic-image.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="../../fast/repaint/resources/repaint.js"></script>
+    <script src="../../fast/repaint/resources/text-based-repaint.js"></script>
     <script>
         function repaintTest() {
             document.getElementById('behindDynamic').setAttribute('fill', 'green');
@@ -11,7 +11,7 @@
         }
     </script>
 </head>
-<body onload="runRepaintTest()">
+<body onload="forceStyleRecalc();repaintTest();">
 Test for WK104207: This test passes if there are 4 green squares each with a smooth black circle in the top-left corner.<br/>
     <svg xmlns="http://www.w3.org/2000/svg" width="400" height="450">
         <!-- Test invalidating content behind the dynamic content. -->
