--- a/LayoutTests/svg/repaint/viewport-mask-update.html
+++ b/LayoutTests/svg/repaint/viewport-mask-update.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../../fast/repaint/resources/repaint.js" type="text/javascript"></script>
+    <script src="../../fast/repaint/resources/text-based-repaint.js" type="text/javascript"></script>
     <script>
       function repaintTest() {
         window.resizeTo(400, 300);
       }
     </script>
   </head>
-  <body onload="runRepaintTest();">
+  <body onload="forceStyleRecalc();repaintTest();;">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <!-- http://crbug.com/307161
            The mask should get resized on window resize.
