--- a/LayoutTests/fast/forms/select-set-length-with-mutation-remove.html
+++ b/LayoutTests/fast/forms/select-set-length-with-mutation-remove.html
@@ -16,7 +16,7 @@ function onRemove(e) {
         e.target.nextSibling.parentNode.removeChild(e.target.nextSibling);
         sel.addEventListener('DOMNodeRemoved', onRemove, false);
     }
-    gc();
+    GCController.collect(); // Use a single GC here to avoid test TIMEOUTs.
 }
 
 var sel = document.createElement('select');
